tests/valid/assignments.nim
# Count: 1
# Negative count: 0

var i = 1
i += 1
