tests/invalid/vardeclared.nim
# Count: 0
# Negative count: 1

var i = 1
